--- a/app/globals.css
+++ b/app/globals.css
@@ -68,7 +68,7 @@
     }
 
     .card_grid {
-        @apply grid md:grid-cols-3 sm:grid-cols-2 gap-5;
+        @apply grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 gap-5;
     }
 
     .card_grid-sm {
